    - [Basic Games] When a map.txt is found, grafics, levels and id elements will automatically be added to levels xml
    - [Link Handler & MWS MO2 Plugin] Added cancel download button to context menu of MO2 downloads
    - [Link Handler] Fix "Failed to delete temp folder" issue
    - [Link Handler] Fix race condition that would occur if you spammed the download button.

- 0.1.3:
    - [MWS MO2 Plugin] Set nexus mod id to 0 when a mod from MWS is installed to disable the "Visit on Nexus" option in the modlist context menu
    - [Basic Games] Hitman 3 Mod Status is now synced with Simple Mod Framework

- 0.1.4
    - [Basic Games] Update to how dlls are loaded (Thanks to daescha)
    - [Basic Games] Added Titanfall 2 but currently will only work using Origin until a MO2 crash is fixed.
    - [Basic Games] Added EmuVR support

- 0.1.5
    - [Basic Games] Cleaned up files some
    - [Basic Games] Added Cassette Beasts Support

- 0.1.6
    - [Basic Games] Changed dll handling for Raid, Payday 2 and Payday 1 to work with the new WREN Error fix.
    - [Installer - Non Zipped] Stop accidental unpacking attempts and add Road to Vostok Support
    - [Basic Games] Added Road to Vostok Support (Including Injector and Lib Support)

- 0.1.7
    - [Basic Games] Added Noita Support
    - [Basic Games] Added OVERKILL's The Walking Dead Support
				
- 0.1.8:
    - [Link Handler] Convert to tkinter from PyQt6. Reduces exe size from 36.3MB to 11.9MB
    - [Link Handler] Fix slow downloads when MO2 is closed
    - [Link Handler] Change duplicate download logic to replicate MO2's. We now ask the user if they want to redownload the file and also insert the file version in the file name.
    - [MWS MO2 Plugin] Replace the "Visit on Nexus" download context menu button with "Visit on ModWorkshop"
    - [MWS MO2 Plugin] Maybe fix bug where a download would be completed but MO2's UI would not reflect it.